--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,14 @@
 
         socket.emit('mensaje', {nombre: 'Sebas'});
 
-        socket.on('mensaje', function(payload){
+        socket.on('nuevo-mensaje', function(payload){
             console.log('Escuchando', payload);
-        })
+        });
+
+        socket.on('active-bands', function(bands){
+            console.clear();
+            console.table(bands);
+        });
 
     </script>
 </body>
